--- a/src/SearchService/SearchService.csproj
+++ b/src/SearchService/SearchService.csproj
@@ -15,5 +15,9 @@
     <PackageReference Include="Polly" Version="7.2.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Contracts\Contracts.csproj" />
+  </ItemGroup>
+
 
 </Project>
