--- a/frontend/web-app/package.json
+++ b/frontend/web-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/react-datepicker": "^4.19.3",
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
     "next": "13.5.4",
@@ -17,7 +18,10 @@
     "query-string": "^8.1.0",
     "react": "^18",
     "react-countdown": "^2.3.5",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "zustand": "^4.4.6"
   },
