--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -99,6 +99,19 @@ services:
     depends_on:
       - mongodb
       - rabbitmq
+  notify-svc:
+    image: saweiner/notify-svc:latest
+    build:
+      context: .
+      dockerfile: src/NotificationService/Dockerfile
+    environment:
+      - APSNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=http://+:80
+      - RabbitMq__Host=rabbitmq
+    ports:
+      - 7004:80
+    depends_on:
+      - rabbitmq
 volumes:
   pgdata:
   mongodata:
