--- a/src/NotificationService/Dockerfile
+++ b/src/NotificationService/Dockerfile
@@ -5,25 +5,26 @@ EXPOSE 80
 # copy all .csproj files and restore as distinct layers Use of the same COPY command
 # for every dockerfile in the project to take advantage of docker caching
 COPY Mauction.sln Mauction.sln
+COPY src/Contracts/Contracts.csproj src/Contracts/Contracts.csproj
 COPY src/AuctionService/AuctionService.csproj src/AuctionService/AuctionService.csproj
 COPY src/SearchService/SearchService.csproj src/SearchService/SearchService.csproj
 COPY src/GatewayService/GatewayService.csproj src/GatewayService/GatewayService.csproj
 COPY src/BiddingService/BiddingService.csproj src/BiddingService/BiddingService.csproj
-COPY src/Contracts/Contracts.csproj src/Contracts/Contracts.csproj 
-COPY src/IdentityService/IdentityService.csproj src/IdentityService/IdentityService.csproj
 COPY src/NotificationService/NotificationService.csproj src/NotificationService/NotificationService.csproj
+COPY src/IdentityService/IdentityService.csproj src/IdentityService/IdentityService.csproj
+
 
 # restore package deps
 RUN dotnet restore Mauction.sln
 
 # Copy the app folders over
-COPY src/BiddingService src/BiddingService
+COPY src/NotificationService src/NotificationService
 COPY src/Contracts src/Contracts
-WORKDIR /app/src/BiddingService
+WORKDIR /app/src/NotificationService
 RUN dotnet publish -c Release -o /app/src/out
 
 # Build runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:7.0
 WORKDIR /app
 COPY --from=build /app/src/out .
-ENTRYPOINT ["dotnet", "BiddingService.dll"]
+ENTRYPOINT ["dotnet", "NotificationService.dll"]
