--- a/src/GatewayService/appsettings.json
+++ b/src/GatewayService/appsettings.json
@@ -87,7 +87,7 @@
         "ClusterId": "notifications",
         "CorsPolicy": "customPolicy",
         "Match": {
-          "Path": "/notification/{**catch-all}"
+          "Path": "/notifications/{**catch-all}"
         }
       }
     }
