--- a/src/IdentityService/appsettings.json
+++ b/src/IdentityService/appsettings.json
@@ -12,5 +12,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost:5432;User Id=postgres;Password=postgrespw;database=identity"
-  }
+  },
+  "ClientApp": "http://localhost:3000"
 }
